[package]
name = "aoc2020"
version = "0.1.0"
authors = ["belst <git@bel.st>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { git = "https://github.com/remi-dupre/aoc.git", branch = "main" }
derive_builder = "0.9.0"